Fix URL format in meta refresh tag

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0; url="https://forms.gle/UetZ6XY9BJb5DDhX7">
+    <meta http-equiv="refresh" content="0; url=https://forms.gle/UetZ6XY9BJb5DDhX7">
     <title>Redirecionando...</title>
 </head>
 <body>
